@@ -4,6 +4,7 @@ DIST refpolicy-2.20110726.tar.bz2 588033 RMD160 9803effffe1dbb28d52bee03432e052f
 DIST refpolicy-2.20120215.tar.bz2 589917 RMD160 333960d5fdd5f9a23a024d1782950a06ada4f2d1 SHA1 1fe2dd03ea27e0e6fbde6e11309895efd43916e6 SHA256 6df77faf62f73bd1f6e3bfca3fa2f77cdfd2cada94a7dcc4816ed9bbcf3545dc
 EBUILD selinux-apache-2.20110726-r1.ebuild 1327 RMD160 e0d73014f65e1983e09110b541b4df5d134a5c1a SHA1 68ed430e54784c909f7cf39eba434d6d984a1537 SHA256 1b88b8526a2ce22fe64273739eedbc41454a7659a97b412d6c31ce6efdacf2ce
 EBUILD selinux-apache-2.20110726-r2.ebuild 1352 RMD160 49d8b85019c5e0aefacd936b94c5cb798c4d49a7 SHA1 748a0694748ce34a55d5a01ac255b85198e5efe5 SHA256 bfedc5b095eca48123fe15ae99704bde2e4845aff4fc2a1c357529ea59b564f7
+EBUILD selinux-apache-2.20120215-r1.ebuild 1409 RMD160 9dd9569cc25034383de8112544d1b75c75a77c28 SHA1 bbdd08884fa83db6c0c7b1dba98fb7ca85a31c70 SHA256 1b2eaa733b98400aa96a16f478e64e6558a0a0a4259009e0529c1ac9d1c82aab
 EBUILD selinux-apache-2.20120215.ebuild 1350 RMD160 72b5ff2a66758fce1e751c6e76d60c0dea83e751 SHA1 53a366fe118f6bec29d0e0b51af6fb5be76ab19e SHA256 b2972c56e320ba67121f3169e2ef43ce94fa82e82720b92537db2cbffa350a1e
-MISC ChangeLog 4717 RMD160 69a9d7e018c69e152189466b0125a6ffea039731 SHA1 719e65d17bb248ef8a72909a0eb641c49026076a SHA256 aadfcf9c5be640efb2370c5e6511d2566823e75fb69d6f29a46d70ea7351b1d9
+MISC ChangeLog 4875 RMD160 d8976cbd7e520cd722752c7423bb3a348601f0cd SHA1 a0278a69665347bfaaeb7623c606c2c2c7ed7a89 SHA256 105ac8101b020cd1ddc8e45a4f1b527e60a47dc9f436f70645f750b73a3c5101
 MISC metadata.xml 230 RMD160 2c43e0d3618064ae18181da1e75b333cd927852b SHA1 9663117fe3d0e177ecc9046ab6576d9b551d19dc SHA256 39c5a0f1a72cffb8f3e242acf702f2d8d1714382952233044a555b96f5f5b6b2
