@@ -1,8 +1,10 @@
 AUX config 631 RMD160 076ae6441a3a29ead502c8bc4b646546095ad95a SHA1 022e0457876cea7068b46c4f14601278215b1056 SHA256 891ddc7cfd577a8591d65f6cb3398863ec338209b347ce9bfc125817b841860e
 DIST patchbundle-selinux-base-policy-2.20120215-r6.tar.bz2 28970 RMD160 4726fd1dc85b5f6ad78389cf882d69c487a664dc SHA1 53e3acd5ce30582636462ae4d3fe834215b88810 SHA256 2a9e0bde439032a2183aed12ff6c18a7bdc00c05c4e1ce59ba097b0733bc776a
 DIST patchbundle-selinux-base-policy-2.20120215-r7.tar.bz2 29331 RMD160 d2f25fcc1bfe063392b68706644b5ff90381fc91 SHA1 557f77ac862d28191aabe2b6a18c1bc5beebae69 SHA256 e9ebe825c0f3651fc8fbf8183036fd61007d1c901d613071c6cfec3bec77963a
+DIST patchbundle-selinux-base-policy-2.20120215-r8.tar.bz2 29993 RMD160 6d6a03ff3d24951529f32442dd713b1f4982aa7b SHA1 1a2fec3e59f4f440598c52cf28c2eee45ce46d92 SHA256 0d2b6b35007f833d49701f4ea4a71b91d056ee4b86c990aa000aea1c431a8d60
 DIST refpolicy-2.20120215.tar.bz2 589917 RMD160 333960d5fdd5f9a23a024d1782950a06ada4f2d1 SHA1 1fe2dd03ea27e0e6fbde6e11309895efd43916e6 SHA256 6df77faf62f73bd1f6e3bfca3fa2f77cdfd2cada94a7dcc4816ed9bbcf3545dc
 EBUILD selinux-base-2.20120215-r6.ebuild 4113 RMD160 9bba272c1d2d7912a8852aab1a8264d10e4c6c21 SHA1 f77672a526754474399f2ce34c4ad1e6a20bdf41 SHA256 85738c8e52b5fb5fea1a16f2f823d076767c4b41de2d6d21ba0bea59fdf9c66c
 EBUILD selinux-base-2.20120215-r7.ebuild 4113 RMD160 913f4802ef1d1b34ee0a5d7f2c9de9e031571bb4 SHA1 58a3ec70f0a3ab1c9d9331e1ef56002104ef17b0 SHA256 dd2f1f828c07faf295a13e23e41302fd1ade4608152d8dd895c8bcad69e0cef5
-MISC ChangeLog 734 RMD160 e1b4854dbac711390b012b5cc09149daff2ce8d8 SHA1 a2aef84b31b32aaf5b3935cbd522d34baaa8065d SHA256 a5e8c1ec5f4384724d4ef0f9ff21c7107f56bf2c65cd8dec90ebc1a37c5e6c72
+EBUILD selinux-base-2.20120215-r8.ebuild 4128 RMD160 c16f99dc5a73b4b448b9430d6eb25a96efbba988 SHA1 8233d8baa94be32a75c416e1bc1b167afebfaaf9 SHA256 ef0490372be08cdb82e4137c80218437ad31297a1e158e95397f9c84297c9657
+MISC ChangeLog 897 RMD160 591f62f798a1869b3e4d46882d4d555d2f8796a8 SHA1 dd7f46b50d44211d748b424ea36c1a4829bec596 SHA256 f333f0619fa3783f959dc84fecf1b41746164738923579fdf3eaa2f5de327baf
 MISC metadata.xml 671 RMD160 49dd94bb827c4ab2bb8043739ef7564df4cf1c07 SHA1 a92b8a5ef129707a44fe2ae1913060d02badd566 SHA256 c32ccc54ca7df400974a19ad14c093ea7b777f7a40467bdb672f441314122e55
