@@ -1,6 +1,11 @@
 # ChangeLog for sec-policy/selinux-base-policy
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-base-policy/ChangeLog,v 1.102 2012/04/22 17:37:49 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-base-policy/ChangeLog,v 1.103 2012/04/26 18:38:44 swift Exp $
+
+*selinux-base-policy-2.20120215-r8 (26 Apr 2012)
+
+  26 Apr 2012; <swift@gentoo.org> +selinux-base-policy-2.20120215-r8.ebuild:
+  Bump to rev8, fix #411719, #411149 and #411943
 
   22 Apr 2012; Michael Sterrett <mr_bones_@gentoo.org>
   selinux-base-policy-2.20120215-r7.ebuild:
