@@ -1,6 +1,11 @@
 # ChangeLog for sec-policy/selinux-base
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-base/ChangeLog,v 1.2 2012/04/22 08:46:05 swift Exp $
+# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-base/ChangeLog,v 1.3 2012/04/26 18:38:44 swift Exp $
+
+*selinux-base-2.20120215-r8 (26 Apr 2012)
+
+  26 Apr 2012; <swift@gentoo.org> +selinux-base-2.20120215-r8.ebuild:
+  Bump to rev8, fix #411719, #411149 and #411943
 
 *selinux-base-2.20120215-r7 (22 Apr 2012)
 
