@@ -1,6 +1,11 @@
 # ChangeLog for sec-policy/selinux-apache
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-apache/ChangeLog,v 1.32 2012/03/31 12:29:43 swift Exp $
+# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-apache/ChangeLog,v 1.33 2012/04/26 18:38:44 swift Exp $
+
+*selinux-apache-2.20120215-r1 (26 Apr 2012)
+
+  26 Apr 2012; <swift@gentoo.org> +selinux-apache-2.20120215-r1.ebuild:
+  Support httpd_setrlimit (bug #411149)
 
 *selinux-apache-2.20120215 (31 Mar 2012)
 
